--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <!-- <hr> -->
                         <ol>
                             <li>
-                                <p><b><font size="3" color="#0b5394">[FSE’22] </font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities</strong><br>Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, and Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore</em>, accepted, 2022. 
+                                <p><b><font size="3" color="#0b5394">[FSE’22] </font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br>Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, and Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore</em>, accepted, 2022. 
                                     <div class="hidden" hidden="true">录用时间：2022-06-14，发表时间：NA 会议时间 Mon 14 - Fri 18 November 2022.11-14-18
                                     <div>
                                 </p>
