--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <header>
                     
                     <h2>About Me</h2>
-                    <p>I am currently a research fellow at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. I obtained my PhD from Fudan University in 2022, supervised by <a href="https://cspengxin.github.io/">Xin Peng</a> and <a href="https://chenbihuan.github.io/">Bihuan Chen</a>.
+                    <p>I am currently a research fellow at <a href="http://www.se.fudan.edu.cn/">Software Engineering Lab</a>, Fudan University. I obtained my PhD from Fudan University in 2022, supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a> and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>.
                         My research interests focus on software engineering, OSS supply chain and software evolution. Here is my <a href="kaifeng_resume.pdf">CV.</a>
                 </header>
                 
