--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2022.08]&nbsp;</strong></span>I was invited to serve on the Program Committee of <a href="https://saner2023.must.edu.mo/tooltrack">SANER 2023 Tool Demo Track</a>.</p>
+                                <p><span class="mydate"><strong>[2022.09]&nbsp;</strong></span>I was invited to serve on the program committee of the <a href="https://conf.researchr.org/track/icse-2023/icse-2023-artifact-evaluation">Artifact Evaluation Track at ICSE 2023</a>.</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p><span class="mydate"><strong>[2022.08]&nbsp;</strong></span>I was invited to serve on the program committee of <a href="https://saner2023.must.edu.mo/tooltrack">Tool Demo Track at SANER 2023</a>.</p>
                                 <p></p>
                             </li>
                             <li>
@@ -289,7 +293,7 @@
              
                             <!-- <img src="images/mail.svg" style="width:44px;height:44px;" alt=""> -->
                             <h2>Mail:</h2>
-                            kaifeng.h AT icloud.com
+                            kaifenghuang[AT]fudan[DOT]edu[DOT]cn
                         </dl>
                         <dl class="contact-icons color1">
                             <h2>Links:</h2>
