--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                     <div class="content">
                         <ul>
                             <li>
+                                <p><span class="mydate"><strong>[2023.07]&nbsp;</strong></span>One paper titled " Demystifying Dependency Bugs in Deep Learning Stack" is accepted by ESEC/FSE 2023.</p>
+                                <p></p>
+                            </li>
+                            <li>
                                 <p><span class="mydate"><strong>[2023.06]&nbsp;</strong></span>I was invited to serve on the program committee of the Artifact Evaluation Track at ESEC/FSE 2023.</p>
                                 <p></p>
                             </li>
@@ -108,7 +112,7 @@
                                 <p></p>
                             </li>
                             <li>
-                                <p><span class="mydate"><strong>[2022.06]&nbsp;</strong></span>One paper titled "Tracking Patches for Open Source Software Vulnerabilities" is accepted by FSE 2022.</p>
+                                <p><span class="mydate"><strong>[2022.06]&nbsp;</strong></span>One paper titled "Tracking Patches for Open Source Software Vulnerabilities" is accepted by ESEC/FSE 2022.</p>
                                 <p></p>
                             </li>
                             <li>
@@ -158,8 +162,17 @@
                     <div class="content">
                         <!-- <hr> -->
                         <ol>
+
                             <li>
-                                <p><b><font size="3" color="#0b5394">[ICSME’23] </font></b> <strong>Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa.</strong><br>Junming Cao, Bihuan Chen, Longjie Hu, Jie Gao, <u>Kaifeng Huang</u>, Xuezhi Song and Xin Peng<em>&nbsp;In Proceedings of the 39th IEEE International Conference on Software Maintenance and Evolution</em>, Bogotá, Colombia, 2022. 
+                                <p><b><font size="3" color="#0b5394">[FSE’23] </font></b> <strong>Demystifying Dependency Bugs in Deep Learning Stack.</strong><br>
+                                    <u>Kaifeng Huang</u>, Bihuan Chen, Susheng Wu, Junming Cao, Lei Ma and Xin Peng
+                                    <em>&nbsp;In Proceedings of the 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, San Francisco, California, United States, 2023, to appear.</em> 
+                                    <div class="hidden" hidden="true">录用时间：2023-07-28，发表时间：NA 会议时间 3 - 9 December 2023.
+                                    <div>
+                                </p>
+                            </li>
+                            <li>
+                                <p><b><font size="3" color="#0b5394">[ICSME’23] </font></b> <strong>Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa.</strong><br>Junming Cao, Bihuan Chen, Longjie Hu, Jie Gao, <u>Kaifeng Huang</u>, Xuezhi Song and Xin Peng<em>&nbsp;In Proceedings of the 39th IEEE International Conference on Software Maintenance and Evolution, Bogotá, Colombia, 2023, to appear.</em>
                                     <div class="hidden" hidden="true">录用时间：2023-06-25，发表时间：NA 会议时间 1 - 6 October 2023.
                                     <div>
                                 </p>
@@ -167,7 +180,7 @@
 
 
                             <li>
-                                <p><b><font size="3" color="#0b5394">[FSE’22] </font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br>Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, and Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore</em>, Singapore, 2022. 
+                                <p><b><font size="3" color="#0b5394">[FSE’22] </font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br>Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, and Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, 2022</em>
                                     <div class="hidden" hidden="true">录用时间：2022-06-14，发表时间：NA 会议时间 Mon 14 - Fri 18 November 2022.11-14-18
                                     <div>
                                 </p>
