--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#news" class="icon solid fa-bullhorn"><span>News</span></a>
             <a href="#publication" class="icon solid fa-book"><span>Publications</span></a>
             <!-- <a href="#education" class="icon solid fa-graduation-cap"><span>Background</span></a> -->
-            <a href="#service" class="icon solid fa-share-alt"><span>service</span></a>
+            <a href="#service" class="icon solid fa-share-alt"><span>Service</span></a>
             <a href="#contact" class="icon solid fa-comments"><span>Contacts</span></a>
             <!-- <a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a> -->
         </nav>
