--- a/index.html
+++ b/index.html
@@ -191,20 +191,20 @@
                             <li>
                                 <p><b><font size="3" color="#0b5394">[EMSE’22] </font></b> <strong>Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Congying Xu, Ying Wang,
                                     Bowen Shi, Xin Peng, Yijian Wu, and Yang Liu.<em>&nbsp;Empirical Software Engineering</em>, 2022, 27.4:90. (An invited extended version of the ICSME'20 paper)
-                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：2022-04-14
+                                    <div class="hidden" hidden="true">录用时间：2022-02-11，发表时间：2022-04-14. ISSN 1382-3256
                                         <div>
                                 </p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ASE’21] </font></b> <strong>RepFinder: Finding Replacements for Missing APIs in Library Update.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Linghao Pan, Shuai Wu, and Xin Peng.<em>&nbsp;In Proceedings of the 36th IEEE/ACM International Conference on Automated Software Engineering, Melbourne, Australia, 2021, pp. 266-278</em>
-                                    <div class="hidden" hidden="true">录用时间：2021-07-08，会议时间：2021-11-14 to 2021-11-20，发表时间：NA
+                                    <div class="hidden" hidden="true">录用时间：2021-07-08，会议时间：2021-11-14 to 2021-11-20，发表时间：NA. ISBN 978-1-6654-0337-5
                                         <div>
                                 </p>
 
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[FSE’20] </font></b> <strong>Interactive, Effort-Aware Library Version Harmonization.</strong> <br><u>Kaifeng Huang</u>, Bihuan Chen, Bowen Shi, Ying Wang, Congying Xu, and Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Sacramento, California, United States, 2020, pp. 518-529.</em>
-                                    <div class="hidden" hidden="true">录用时间：2020-05-20，会议时间：2020-11-6 to 2020-11-16，发表时间：NA
+                                    <div class="hidden" hidden="true">录用时间：2020-05-20，会议时间：2020-11-6 to 2020-11-16，发表时间：NA. ISBN-13: 9781450370431
                                         <div>
                                 </p>
                             </li>
@@ -213,7 +213,7 @@
                                     <div id="distinguished">
                                         <font size="3" color="#0b5394">&nbsp;&nbsp;🏆IEEE TCSE Distinguished Paper Award&nbsp;&nbsp;</font>
                                     </div><br>Ying Wang, Bihuan Chen, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu and Yang Liu.<em>&nbsp;In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia, 2020, pp. 35-45.</em>
-                                    <div class="hidden" hidden="true">录用时间：2020-08-04，会议时间：2020-9-27 to 2020-10-03，发表时间：NA
+                                    <div class="hidden" hidden="true">录用时间：2020-08-04，会议时间：2020-9-27 to 2020-10-03，发表时间：NA. ISBN-13: 9781728156194. ISSN: 1063-6773
                                         <div>
                                 </p>
                             </li>
@@ -222,14 +222,14 @@
                                     <div id="distinguished">
                                         <font size="3" color="#0b5394">&nbsp;&nbsp;🏆ACM SIGSOFT Distinguished Paper Award&nbsp;&nbsp;</font>
                                     </div><br><u>Kaifeng Huang</u>, Bihuan Chen, Xin Peng, Daihong Zhou, Ying Wang, Yang Liu, and Wenyun Zhao.<em>&nbsp;In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France, 2018, pp. 679-690.</em>
-                                    <div class="hidden" hidden="true">录用时间：2018-07-04，会议时间：2018-09-03 to 2018-09-07，发表时间：NA
+                                    <div class="hidden" hidden="true">录用时间：2018-07-04，会议时间：2018-09-03 to 2018-09-07，发表时间：NA. ISBN-13:9781450359375. ISSN: 1527-1366
                                         <div>
                                 </p>
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSA’20] </font></b> <strong>DesignDiff: Continuously Modeling Software Design Difference from Code Revisions.</strong> <br>Xiao Wang, Lu Xiao, <u>Kaifeng Huang</u>, Bihuan Chen, Yutong
                                     Zhao, and Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil, 2020, pp. 179-190.</em>
-                                    <div class="hidden" hidden="true">录用时间：2020-02-19，会议时间：2020-09-02 to 2020-09-06，发表时间：NA
+                                    <div class="hidden" hidden="true">录用时间：2020-02-19，会议时间：2020-09-02 to 2020-09-06，发表时间：NA. ISBN: 978-1-7281-4659-1
                                         <div>
                                 </p>
                             </li>
