--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                             <li>
                                 <p><b><font size="3" color="#0b5394">[FSE’23] </font></b> <strong>Demystifying Dependency Bugs in Deep Learning Stack.</strong><br>
-                                    <u>Kaifeng Huang</u>, Bihuan Chen, Susheng Wu, Junming Cao, Lei Ma and Xin Peng
+                                    <u>Kaifeng Huang</u>, Bihuan Chen, Susheng Wu, Junming Cao, Lei Ma and Xin Peng.
                                     <em>&nbsp;In Proceedings of the 31st ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, San Francisco, California, United States, 2023, to appear.</em>
                                     <div class="hidden" hidden="true">录用时间：2023-07-28，发表时间：NA 会议时间 3 - 9 December 2023.
                                         <div>
@@ -184,7 +184,7 @@
 
                             <li>
                                 <p><b><font size="3" color="#0b5394">[FSE’22] </font></b> <strong>Tracking Patches for Open Source Software Vulnerabilities.</strong><br>Congying Xu, Bihuan Chen, Chenhao Lu, <u>Kaifeng Huang</u>, Xin Peng, and Yang Liu.<em>&nbsp;In Proceedings of the 30th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, 2022</em>
-                                    <div class="hidden" hidden="true">录用时间：2022-06-14，发表时间：NA 会议时间 Mon 14 - Fri 18 November 2022.11-14-18
+                                    <div class="hidden" hidden="true">录用时间：2022-06-14，发表时间：NA 会议时间 Mon 14 - Fri 18 November 2022.11-14-18. ISBN: 978-145039413-0
                                         <div>
                                 </p>
                             </li>
@@ -293,7 +293,7 @@
                             <li>IEEE Transactions on Reliability</li>
                             <li>Journal of Software (软件学报)</li>
                             <li>Artifact Evaluation Track, ICSE 2023</li>
-                            <li>Tool Demo Track, SANER 2023 </li>
+                            <li>Tool Demo Track, SANER 2023/2024</li>
                         </ul>
 
                     </div>
