--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Kaifeng Huang - Home</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="assets/css/main-test.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
     <!-- CSS only -->
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -175,7 +175,7 @@
                             </li>
                             <li>
                                 <p><b><font size="3" color="#0b5394">[ICSME’23] </font></b> <strong>Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa.</strong><br>Junming Cao, Bihuan Chen, Longjie Hu, Jie
-                                    Gao, <u>Kaifeng Huang</u>, Xuezhi Song and Xin Peng<em>&nbsp;In Proceedings of the 39th IEEE International Conference on Software Maintenance and Evolution, Bogotá, Colombia, 2023, to appear.</em>
+                                    Gao, <u>Kaifeng Huang</u>, Xuezhi Song and Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE International Conference on Software Maintenance and Evolution, Bogotá, Colombia, 2023.</em>
                                     <div class="hidden" hidden="true">录用时间：2023-06-25，发表时间：NA 会议时间 1 - 6 October 2023.
                                         <div>
                                 </p>
