--- a/index_template.html
+++ b/index_template.html
@@ -218,6 +218,7 @@
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
                         <ul>
+                            <li>Transactions on Software Engineering</li>
                             <li>Science of Computer Programming</li>
                             <li>Empirical Software Engineering</li>
                             <li>Artifact Evaluation Track, ESEC/FSE 2023</li>
