--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <li><p><b><font size="3" color="#0b5394">[FSE'20]</font></b> <strong>Interactive, effort-aware library version harmonization.</strong><br> <u>Kaifeng Huang</u>, Bihuan Chen*, Bowen Shi, Ying Wang, Congying Xu, Xin Peng.<em>&nbsp;In Proceedings of the 28th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering, Singapore, pp. 518-529, 2020.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ICSME'20]</font></b> <strong>An Empirical Study of Usages, Updates and Risks of Third-Party Libraries in Java Projects.</strong><br> Ying Wang, Bihuan Chen*, <u>Kaifeng Huang</u>, Bowen Shi, Congying Xu, Xin Peng, Yijian Wu, Yang Liu.<em>&nbsp;In Proceedings of the 36th IEEE International Conference on Software Maintenance and Evolution, Adelaide, Australia, pp. 35-45, 2020.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'18]</font></b> <strong>Cldiff: Generating concise linked code differences.</strong><br> <u>Kaifeng Huang</u>, Daihong Zhou, Bihuan Chen*, Ying Wang, Wenyun Zhao, Xin Peng, Yang Liu.<em>&nbsp;In Proceedings of the 33rd IEEE/ACM International Conference on Automated Software Engineering, Montpellier, France, pp. 679-690, 2018.</em></p></li>
-<li><p><b><font size="3" color="#0b5394">[ICSA'20]</font></b> <strong>Designdiff: Continuously modeling software design difference from code revisions.</strong><br> Xing Wang, Lu Xiao*, <u>Kaifeng Huang</u>, Bihuan Chen, Yutong Zhao, Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil, pp. 179-190, 2020.</em></p></li>
+<li><p><b><font size="3" color="#0b5394">[ICSA'20]</font></b> <strong>Designdiff: Continuously modeling software design difference from code revisions.</strong><br> Xiao Wang, Lu Xiao*, <u>Kaifeng Huang</u>, Bihuan Chen, Yutong Zhao, Yang Liu.<em>&nbsp;In Proceedings of the IEEE International Conference on Software Architecture, Salvador, Bahia, Brazil, pp. 179-190, 2020.</em></p></li>
 
                         </ol>
                         </div>
@@ -227,6 +227,7 @@
                     <div class="content">
                         <h3>Reviewers and PC Members:</h3>
                         <ul>
+                            <li>Transactions on Software Engineering</li>
                             <li>Science of Computer Programming</li>
                             <li>Empirical Software Engineering</li>
                             <li>Artifact Evaluation Track, ESEC/FSE 2023</li>
