--- a/index_template.html
+++ b/index_template.html
@@ -166,7 +166,7 @@
                         <ol>
                             %s
                         </ol>
-                        </div>
+                    </div>
                 </section>
                 <a href="#service">
                     <span class="arrow icon solid fa-chevron-right"><span></span></span>
@@ -219,6 +219,8 @@
                         <h3>Reviewers and PC Members:</h3>
                         <ul>
                             <li>Transactions on Software Engineering</li>
+                            <li>Journal of Systems & Software</li>
+                            <li>Junior PC-Track, MSR 2024</li>
                             <li>Science of Computer Programming</li>
                             <li>Empirical Software Engineering</li>
                             <li>Artifact Evaluation Track, ESEC/FSE 2023</li>
@@ -303,25 +305,25 @@
 
             </article>
 
-            </div>
+        </div>
 
-            <!-- Footer -->
-            <div id="footer">
-                <ul class="copyright">
-                    <li>&copy;Copyright </li>
-                    <li><a href="http://html5up.net">Template from HTML5 UP</a></li>
-                </ul>
-            </div>
+        <!-- Footer -->
+        <div id="footer">
+            <ul class="copyright">
+                <li>&copy;Copyright </li>
+                <li><a href="http://html5up.net">Template from HTML5 UP</a></li>
+            </ul>
+        </div>
 
-            </div>
+    </div>
 
-            <!-- Scripts -->
-            <script src="assets/js/jquery.min.js"></script>
-            <script src="assets/js/browser.min.js"></script>
-            <script src="assets/js/breakpoints.min.js"></script>
-            <script src="assets/js/util.js"></script>
-            <script src="assets/js/keyboard.min.js"></script>
-            <script src="assets/js/main.js"></script>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/keyboard.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
 </body>
 
