--- a/index_template.html
+++ b/index_template.html
@@ -94,7 +94,16 @@
                     <div class="content">
                         <ul>
                             <li>
-                                <p><span class="mydate"><strong>[2023.07]&nbsp;</strong></span>One paper titled " Demystifying Dependency Bugs in Deep Learning Stack" is accepted by ESEC/FSE 2023.</p>
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Enhancing Field Tracking and Interprocedural Analysis to Find More Null Pointer Exceptions" is accepted by SANER 2024.</p>
+                                <p></p>
+                            </li>
+                            <li>
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities" is accepted by ICSE 2024.</p>
+                                <p></p>
+                            </li>
+
+                            <li>
+                                <p><span class="mydate"><strong>[2023.07]&nbsp;</strong></span>One paper titled "Demystifying Dependency Bugs in Deep Learning Stack" is accepted by ESEC/FSE 2023.</p>
                                 <p></p>
                             </li>
                             <li>
