--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
                                 <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>Our paper titled "Identifying Affected Libraries and Their Ecosystems for Open Source Software Vulnerabilities" is accepted by ICSE 2024.</p>
                                 <p></p>
                             </li>
-
+                            <li>
+                                <p><span class="mydate"><strong>[2023.12]&nbsp;</strong></span>I was invited to serve on the program committee of the Research Track at ASE 2024.</p>
+                                <p></p>
+                            </li>
                             <li>
                                 <p><span class="mydate"><strong>[2023.07]&nbsp;</strong></span>One paper titled "Demystifying Dependency Bugs in Deep Learning Stack" is accepted by ESEC/FSE 2023.</p>
                                 <p></p>
